# speechbench

./: .gitignore  README.md  asr_benchmark_plan.md  lessons_from_finetuning.md  lessons_from_finetuning_working_recipe.md  pyproject.toml  requirements-mac.txt  requirements-vm.txt
results/comparison/: report.csv  report.md  summary.json
results/comparison/raw/: 12d73319b01f.json  3169693c1e9c.failed.json  3fcac6aa08c8.json  4885bce7171a.json  7a60ae647a73.failed.json
results/en_cv22/: report.csv  report.md  summary.json
results/en_cv22/raw/: 02d270698103.json  1a1c479e5d58.json  (+21 more)
results/es/: report.csv  report.md  summary.json
results/es2/: report.csv  report.md  summary.json
results/eslt300/: report.csv  report.md  summary.json
results/full/: report.csv  report.md  summary.json
results/gemma_extras/: report.csv  report.md  summary.json
results/lt/: report.csv  report.md  summary.json
results/lt25/: report.csv  report.md  summary.json
results/lt25g/: report.csv  report.md  summary.json
results/ltft300/: jobs.json  report.csv  report.md  summary.json
results/macgemma/: jobs.json
results/mactest/: jobs.json
results/realistic/: report.csv  report.md  summary.json
results/smoketest/: report.csv  report.md  summary.json
scripts/: launch.sh  test_parakeet_cpu.py
speechbench/: __init__.py  cli.py  config.py  cost.py  datasets.py  eval.py  gcp.py  models.py  orchestrate.py  report.py  runner.py  startup.sh
web/: .firebaserc  build.py  firebase.json
web/.firebase/: hosting.cHVibGlj.cache
web/public/: index.html  results.json
(+351 files in other folders)
